完成新版面

--- a/_posts/2018-10-23-JXLS入门指南.md
+++ b/_posts/2018-10-23-JXLS入门指南.md
@@ -1,9 +1,8 @@
 ---
-layout: post
 ---
 
 今天碰到需求，要对埋点数据做统计，想利用Excel提供的强大函数库，所以激灵把数据导出成Excel文档。又苦于Apache POI太过于繁琐，谷歌搜寻到这款基于模板的工具。
-
+<!--more-->
 原文文档见此：[JXLSGetting Started Guide](http://jxls.sourceforge.net/getting_started.html)
 
 以下属于搬砖翻译，不喜请轻喷。
