--- a/_posts/2018-10-20-refactor.md
+++ b/_posts/2018-10-20-refactor.md
@@ -5,7 +5,7 @@ date:   2018-10-20 11:53:42 +0800
 new LiinNs
 
 给项目添加sitemap
-
+<!-- more -->
 ~~~ code
 # 1. add this to Gemfile
 group :jekyll_plugins do
