更新分页数

--- a/_posts/2018-11-10-理解Ruby的self关键词.md
+++ b/_posts/2018-11-10-理解Ruby的self关键词.md
@@ -76,7 +76,7 @@ date: 2018-11-10 20:57:33 +0800
 {% endhighlight %}
 
 
-当一个方法直接调用未显式指定调用者时，就相当于在self上调用。如下例中`Person#full_name`中，直接调用了`Person#first_name` 和 `Person#last_name`，这时`self`就指向当前调用`full_name`的实例。
+当一个方法直接调用未显式指定调用者时，就相当于在self上调用。如下例`Person#full_name`中，直接调用了`Person#first_name` 和 `Person#last_name`，这时`self`就指向当前调用`full_name`的实例。
 {% highlight ruby %}
   class Person
     attr_reader :first_name, :last_name
