更新post展示效果

--- a/_posts/2018-11-10-理解Ruby的self关键词.md
+++ b/_posts/2018-11-10-理解Ruby的self关键词.md
@@ -4,7 +4,7 @@ tags: ruby rails self
 date: 2018-11-10 20:57:33 +0800
 ---
 
-### 理解Ruby的self关键词  
+### {{page.title}}  
 
 
 [原文链接](https://codequizzes.wordpress.com/2014/04/07/rubys-self-keyword-and-implicit-self/)   
