--- a/_posts/2018-11-10-通过CLI删除Redis键值.md
+++ b/_posts/2018-11-10-通过CLI删除Redis键值.md
@@ -3,7 +3,7 @@ categories: redis
 tags: [redis, cli, key, value]
 ---
 
-### 批量删除Redis Key-Value
+### {{page.title}}  
 
 1. Windows系统下   
 `./redis-cli.exe -a mypassword -h 127.0.0.1 -p 6379 -n 6 eval "redis.call('del', unpack(redis.call('keys','KEY*')))" 0`  
