--- a/_posts/2018-10-23-JXLS入门指南.md
+++ b/_posts/2018-10-23-JXLS入门指南.md
@@ -2,7 +2,7 @@
 categories: java
 tags: [JXLS, excel, java, APOI]
 ---
-### JXLS入门指南
+### {{page.title}}  
 
 今天碰到需求，要对埋点数据做统计，想利用Excel提供的强大函数库，所以激灵把数据导出成Excel文档。又苦于Apache POI太过于繁琐，谷歌搜寻到这款基于模板的工具。
 <!-- more -->
